Refactored payments to split code out of views and into core.
Set up Django messages in the base template. This makes it easy (and consistent)
to report back to users. Customised the css to look better.
Set up cobalt.css to centralise css code
Payment statements updated. Screen is too busy now and we should make it
only show minimal information and have a click option to show details.
Renamed the tables in Payments to more sensible names - StripeTransaction,
InternalTransaction, AutoTopUpConfig
Search in Payments admin for stripe_reference and our own reference number
Updated error handling for one off payments
Updated error handling for auto payments set up
Added basic pdf and csv download options to statements