@@ -42,7 +42,7 @@
            </div>
 
            <button type="submit" class="btn btn-success center-text">Change</button>
-
+           <button class="btn btn-primary center-text" onclick="window.location.href='{% url "dashboard" %}'">Cancel</button>
          </form>
         </div>
       </div>
