@@ -34,8 +34,8 @@
          <div class="card">
            <div class="card-body">
              <h1>Congratulations!</h1>
-             <h2>Hi {{ user.first_name }}, your password has been changed.</h2>
-             <h4>You can login using your email address, {{ GLOBAL_ORG }} number or username.</h4>
+             <h2>Your password has been changed.</h2>
+             <h4>You can login using your email address or {{ GLOBAL_ORG }} number.</h4>
              <h3> We will take you to the login screen in <span id="time">10 seconds</span>.
              <h3><a href="{% url 'user_profile' %}">Click here to go there now</a></h3>
            </div>
@@ -80,12 +80,12 @@
   <script src="{% static "assets/js/core/bootstrap-material-design.min.js" %}"></script>
   <script>
     $('document').ready(function(){
-      var time=20;
+      var time=10;
       setInterval(function() {
         document.getElementById("time").innerHTML = time + " seconds";
         time--;
         if (time == 0) {
-          window.location.href = "/profile";
+          window.location.href = "{% url "dashboard" %}";
         }
       }, 1000);
 
