@@ -41,14 +41,14 @@
                <div class=" text-center">
                  <h4><i class="material-icons">dashboard</i></h4>
               </div>
-              <h4 class="text-center">Come on in</h4>
+              <h4 class="text-center">Password Reset</h4>
 
 
              </div>
              <div class="card-body">
+               {% if validlink %}
       	    		<form role="form" method="post">
                  {% csrf_token %}
-
                  {% if form.non_field_errors %}
                          {% for error in form.non_field_errors %}
                              {{ error }}
@@ -56,25 +56,31 @@
                  {% endif %}
 
                  <div class="form-group">
-                   <span class="cobalt-form-error" id="id_username_errors">{{ form.username.errors|striptags }}</span>
-      	    				<input type="text" name="username" id="id_username" class="form-control input-sm" placeholder="{{ GLOBAL_ORG}} number or email">
-      	    			</div>
+                   <span class="cobalt-form-error" id="id_newpassword1_errors">{{ form.new_password1.errors|striptags }}</span>
+                   <input type="password" name="new_password1" id="id_new_password1" class="form-control input-sm" placeholder="New Password">
+      	    		 </div>
 
-        					<div class="form-group">
-                   <span class="cobalt-form-error" id="id_password_errors">{{ form.password.errors|striptags }}</span>
+                 <div class="form-group">
+                   <span class="cobalt-form-error" id="id_newpassword2_errors">{{ form.new_password2.errors|striptags }}</span>
+                   <input type="password" name="new_password2" id="id_new_password2" class="form-control input-sm" placeholder="Confirm Password">
+      	    		 </div>
 
-        						<input type="password" name="password" id="id_password" class="form-control input-sm" placeholder="Password">
-        					</div>
+                 <input type="submit" value="Reset" class="btn btn-block bg-primary">
+                 </form>
 
-      	    			<input type="submit" value="Login" class="btn btn-block bg-primary">
+                 {% else %}
 
-      	    		</form>
+                 <p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
+
+                 {% endif %}
+
+
                 <span class="center-block d-flex justify-content-between">
-                  <div>
-                    <a href="{% url "register" %}">Sign Up</a>
+                <div>
+                  <a href="{% url "dashboard" %}">Sign In</a>
                 </div>
                 <div>
-                  <a href="{% url "password_reset" %}">Reset password</a>
+                  <a href="{% url "register" %}">Sign Up</a>
                 </div>
                 </span>
           		</div>
