@@ -1,0 +1,12 @@
+{% autoescape off %}
+You're receiving this email because you requested a password reset for your user
+account at {{ domain}}.
+
+Please go to the following page and choose a new password:
+
+{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+
+
+Yours,
+The {{ GLOBAL_ORG }} Team
+{% endautoescape %}
