@@ -62,10 +62,10 @@
   			    		</form>
                <span class="center-block d-flex justify-content-between">
                  <div>
-                   <a href="/dashboard">&nbsp;Login</a>
+                   <a href="{% url "dashboard" %}">&nbsp;Sign In</a>
                  </div>
                <div>
-                 <a href="/accounts/register">Signup&nbsp;</a>
+                 <a href="{% url "register" %}">Sign Up&nbsp;</a>
                </div>
                </span>
        		  </div>
