@@ -1,0 +1,6 @@
+export RDS_DB_NAME=ebdb
+export RDS_HOSTNAME=127.0.0.1
+export RDS_PORT=5432
+export RDS_USERNAME=cobalt
+export RDS_PASSWORD=F1shcake
+export GLOBAL_MPSERVER=http://masterpoints-test.eba-eantgkuf.ap-southeast-2.elasticbeanstalk.com
