@@ -10,3 +10,4 @@ Search in Payments admin for stripe_reference and our own reference number
 Updated error handling for one off payments
 Updated error handling for auto payments set up
 Added basic pdf and csv download options to statements
+Fixed a lot of issues with Accounts as picked up by Julian's testing.
